magnatune: remove memleak in xml parser

BUG: 301349
FIXED-IN: 2.7